# scribbli-mvp

./: .gitignore  .pylintrc  README.rst  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt
dsms/: __init__.py  base.py  mixins.py
scribbli/: apps.py  middleware.py  schema.py  settings.py  urls.py  wsgi.py
scribbli/characters/: admin.py  apps.py  urls.py
scribbli/characters/migrations/: 0001_initial.py
scribbli/characters/models/: character.py
scribbli/characters/serializers/: character.py
scribbli/characters/views/: __init__.py
scribbli/models/mixins/: __init__.py  timestamp.py
scribbli/profiles/: apps.py  constants.py  urls.py
scribbli/profiles/migrations/: 0001_initial.py  0002_profile_role.py
scribbli/profiles/models/: profile.py
scribbli/profiles/serializers/: profile.py
scribbli/profiles/views/: __init__.py  detail.py
scribbli/signals/: slug.py
scribbli/stories/: admin.py  apps.py  urls.py
scribbli/stories/migrations/: 0001_initial.py
scribbli/stories/models/: __init__.py  post.py  story.py
scribbli/stories/serializers/: __init__.py  post.py  story.py
scribbli/stories/views/: __init__.py  story.py
scribbli/templatetags/: debugging.py  scribbli_strings.py
scribbli/universe/: admin.py  apps.py  schema.py  urls.py
scribbli/universe/apiviews/: __init__.py  location.py
scribbli/universe/migrations/: 0001_initial.py
scribbli/universe/models/: __init__.py  location.py  mixins.py  universe.py
scribbli/universe/serializers/: __init__.py  location.py  universe.py
scribbli/utils/: __init__.py  jwt.py
(+32 files in other folders)
